--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="row">
         <div class="col-xs-12 home-title">
-          <h2>Lionel Messi</h2>
+          <h2>Lionel Messi 10</h2>
           <p>Web Designer</p>
         </div>
       </div>
@@ -48,7 +48,7 @@
       <!-- El contenido en la grilla de bootstrap siempre va dentro de una row y luego dentro de una col-* -->
       <div class="row">
         <div class="col-xs-12">
-          <h3>Sobre mí</h3>
+          <h3>Información personal</h3>
           <p>Me llamo Lionel Messi, juego en el Barcelona y en mis ratos libres diseño páginas web.</p>
           <p>Me especializo en sitios de fútbol, hace poco realicé el sitio de <a href="http://www.fifa.com" target="_blank">FIFA.com</a></p>
         </div>
@@ -104,13 +104,13 @@
           <div class="item">
             <img src="imagenes/nike_website.png" alt="...">
             <div class="carousel-caption">
-              <h4>Sitio de Nike</h3>
+              <h3>Sitio de Nike</h3>
             </div>
           </div>
           <div class="item">
             <img src="imagenes/messi_500.jpg" alt="...">
             <div class="carousel-caption">
-              <h4>500 goles en el Barsa</h3>
+              <h3>500 goles en el Barsa</h3>
             </div>
           </div>
         </div>
